--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -768,6 +768,9 @@ QMessageBox QPushButton
            <layout class="QHBoxLayout" name="horizontalLayout_9" stretch="0,0,0,0,0,0,0,0">
             <item>
              <widget class="QPushButton" name="pushButton_3">
+              <property name="toolTip">
+               <string>查看歌单</string>
+              </property>
               <property name="text">
                <string/>
               </property>
