--- a/notewindow.ui
+++ b/notewindow.ui
@@ -93,6 +93,16 @@ QMessageBox QPushButton
 QInputDialog QPushButton
 {
 	width:60px;
+}
+QScrollBar
+{
+	border-raidus:8px;
+	background-color:rgb(215,200,215);
+}
+QScrollBar::handle
+{
+	border-radius:8px;
+	background-color:rgb(220,190,220);
 }</string>
   </property>
   <widget class="QWidget" name="centralwidget">
