--- a/res.qrc
+++ b/res.qrc
@@ -36,6 +36,8 @@
         <file>images/down.png</file>
         <file>images/up.png</file>
         <file>images/mute.png</file>
+        <file>images/save.png</file>
+        <file>images/time.png</file>
     </qresource>
     <qresource prefix="/fonts">
         <file>fonts/Huxiaobo.ttf</file>
