--- a/setdialog.ui
+++ b/setdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>番茄钟设置</string>
+   <string>保存设置</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QPushButton
@@ -659,6 +659,35 @@ QLabel
         </spacer>
        </item>
        <item>
+        <widget class="QPushButton" name="btn_save">
+         <property name="minimumSize">
+          <size>
+           <width>64</width>
+           <height>32</height>
+          </size>
+         </property>
+         <property name="toolTip">
+          <string>储存设置</string>
+         </property>
+         <property name="autoFillBackground">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="res.qrc">
+           <normaloff>:/icons/images/save.png</normaloff>:/icons/images/save.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="btn_reset">
          <property name="minimumSize">
           <size>
@@ -735,8 +764,8 @@ QLabel
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>72</x>
-     <y>152</y>
+     <x>83</x>
+     <y>195</y>
     </hint>
     <hint type="destinationlabel">
      <x>786</x>
@@ -751,8 +780,8 @@ QLabel
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>178</x>
-     <y>154</y>
+     <x>235</x>
+     <y>195</y>
     </hint>
     <hint type="destinationlabel">
      <x>226</x>
