Fixed a bug that clear lienEdit when change language.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -741,6 +741,9 @@ QScrollBar::handle
               <pointsize>18</pointsize>
              </font>
             </property>
+            <property name="acceptDrops">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string/>
             </property>
