--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -64,6 +64,40 @@ QLineEdit
 QComboBox
 {
 	background-color:rgb(255,99,71);
+	border-radius:4px;
+	border:1px solid rgb(105,105,105);
+	padding:0px 4px;
+}
+QComboBox::drop-down
+{
+	border-radius:4px;
+}
+QComboBox::down-arrow
+{
+	image:url(:/icons/images/down.png);
+	width:15px;
+}
+QComboBox QAbstractItemView
+{
+	background-color:#FFF5E6;
+	color:#333333;
+	border:1px solid rgb(255,99,71);
+	border-radius:4px;
+	padding:3px;
+	selection-background-color:rgb(255,99,71);
+	selection-color:white;
+}
+QComboBox QAbstractItemView::item:hover
+{
+	background-color:#FF4500;
+}
+QComboBox::hover
+{
+	border-color:#FF4500;
+}
+QComboBox::drop-down:hover
+{
+	background-color:rgba(255,255,255,0.1);
 }
 QSlider::handle
 {
@@ -1060,7 +1094,7 @@ QScrollBar::handle
            </spacer>
           </item>
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_14" stretch="1,1,1">
+           <layout class="QHBoxLayout" name="horizontalLayout_14" stretch="2,2,3">
             <item>
              <spacer name="horizontalSpacer_19">
               <property name="orientation">
